2020-07-23  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.3.8

2020-07-22  Dirk Eddelbuettel  <edd@debian.org>

	* tests/tinytest.R: No longer call tests in parallel

2020-07-20  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Switch to 'bionic' and R 4.0.*

2020-07-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/init.R: Support OS detection for some flavours of Linux, add
	predicates to test e.g. .isUbuntu() vs .isFedora()
	* NAMESPACE: Import utils::read.table() for this

	* inst/tinytest/test_simple.R: Also skip if on Fedora as the CRAN
	tests apparently cannot be fixed

2020-04-14  Dirk Eddelbuettel  <edd@debian.org>

	* README.md (tinytest): Add 'last commit' badge

2020-01-20  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.3.7

	* cleanup: Partly rewritten to fall afoul of bashism tests

2020-01-19  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version

	* R/anytime.R: Minor code tightening for calcUnique
	* inst/tinytest/test_calc_unique.R: Renamed from test_pr_110.R

2020-01-18  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_pr_110.R: New test for PR 110

	* R/anytime.R: Reassert proper line-endings, add nocov tags
	* man/anytime.Rd: Re-run roxygenize()

2020-01-18  Stephen Froehlich  <s.froehlich@cablelabs.com>

	* R/anytime.R: Add new option 'calcUnique' for more efficient
	processing of input with many repeated values
	* man/anytime.Rd: Add documentation

2020-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add another usage example

2019-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars (PKG_CXXFLAGS): Use no-rtti define for Rcpp

2019-10-12  Dirk Eddelbuettel  <edd@debian.org>

        * README.md: Add CRAN usage badge

2019-08-30  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
